--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
         
         <div id="Box">
             <div class="Menu">
-                <div class="Menubox"><p>Menu</p></div>
-                <div class="Menubox"><p>Leben</p></div>
-                <div class="Menubox"><p>Geschichte</p></div>
-                <div class="Menubox"><p>Fotografie</p></div>
+                <div class="Menubox"><a href="#">Menu</a></div>
+                <div class="Menubox"><a href="#">Leben</a></div>
+                <div class="Menubox"><a href="#">Geschichte</a></div>
+                <div class="Menubox"><a href="#">Fotografie</a></div>
             </div>
             <div id="Inhalt">
                 <h1> Die Honig Biene </h1>
             <p>Honigbienen stehen seit Jahren im Fokus der Öffentlichkeit.
 Immer wieder weisen die Medien auf die Leistungen,
-aber auch auf die Schwierigkeiten unserer Nutzinsekten
-hin. Auf diese Weise kommen Kinder und Jugendliche,
-auch außerhalb des Unterrichtes, mit dieser Thematik in
-Berührung.
+aber auch auf die r und Jugendliche,
+auch außerhalb des Unterrichtes, smit dieser Thematik in
+Berührung.ddd
 Andererseits ist die Verunsicherung bei den Schülerinnen
 und Schülern oft groß. Handelt es sich bei dem Insekt
 wirklich um eine Biene oder doch eher um eine Wespe?
