--- a/Impressum.html
+++ b/Impressum.html
@@ -14,7 +14,7 @@
 
        <nav>
        <ul> 
-           <li><a href="/14(Graalfs)/index.html">Home</a></li>
+           <li><a href="/index.html">Home</a></li>
            <li><a href="#">Über Uns</a>
            
                     
