--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
           <title> Strtleiste </title>
     <meta charset="utf-8"> 
-    <link href="/15/styels.css" rel="stylesheet" type="text/css">
+    <link href="styels.css" rel="stylesheet" type="text/css">
     </head>
 <body bgcolor="#e1fadb">
          
